# aegismail

./: .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/scripts/: copy-sidecar.mjs  gen-icon.mjs
apps/desktop/src/: App.tsx  main.tsx  themes.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: client.ts  hooks.ts
apps/desktop/src/components/: AiPanel.tsx  ConnectAccountForm.tsx  MessageList.tsx  MessageView.tsx  SettingsModal.tsx  Sidebar.tsx  TitleBar.tsx
apps/desktop/src/contexts/: ThemeContext.tsx
apps/server/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/server/scripts/: package.mjs
apps/server/src/: app.ts  auth.test.ts  auth.ts  config.ts  env.ts  index.ts  keychain.test.ts  keychain.ts  logger.ts  mcp.ts
apps/server/src/db/: accounts.test.ts  accounts.ts  index.ts  migrations.ts  paths.ts
apps/server/src/oauth/: google.ts  loopback.test.ts  loopback.ts  microsoft.ts  pkce.test.ts  pkce.ts  token-store.ts
docs/: oauth-setup.md
(+7 files in other folders)
