[package]
name = "aegismail-desktop"
version = "0.0.0"
description = "AegisMail — unified mail client desktop shell"
authors = ["AegisMail contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/aegismail/aegismail"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aegismail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
rand = "0.8"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
